Change gradle build process to generate a working Eclipse launch config with -nosuperDevMode.